style.css
:root {
  --bg-color-dark: #141c2f;
  --bg-color-light: #f5f8ff;
  --card-color-dark: #1f2a48;
  --card-color-light: #fefefe;
  --text-color-dark: #fefefe;
  --text-color-light: #454a50;
  --primary-color: #0079fe;
}

*,
*::before,
*::after {
  margin: 0;
  box-sizing: border-box;
}

button,
input {
  outline: none;
  border: none;
  font-family: inherit;
}

a:link,
a:visited {
  color: var(--primary-color);
  text-decoration: none;
}

ul {
  list-style: none;
  padding: 0;
}

body {
  font-family: 'Space Mono', monospace;
  background-color: var(--bg-color-dark);
  color: var(--text-color-dark);
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 50px;
  min-height: 100vh;
  padding: 40px 20px;
  transition: 0.3s all;
  font-size: 15px;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo {
  font-size: 30px;
  font-weight: bold;
  line-height: 27px;
}

input[type='checkbox'] {
  display: none;
}

nav label {
  text-transform: uppercase;
  letter-spacing: 3.5px;
  font-weight: bold;
  cursor: pointer;
  transition: all 0.2s;
  display: flex;
  align-items: center;
  gap: 16px;
}

.card {
  background-color: var(--card-color-dark);
  border-radius: 15px;
}

form {
  display: flex;
  align-items: center;
  gap: 2%;
  padding: 8px 8px 8px 14px;
  position: relative;
  margin-bottom: 20px;
}

input[type='search'] {
  flex: 1;
  background-color: transparent;
  color: var(--text-color-dark);
  box-shadow: none;
}

input[type='search']::placeholder {
  color: var(--text-color-dark);
}

input[type='search']:focus-visible {
  border-bottom: 1px solid var(--primary-color);
}

input[type='search']::-webkit-search-decoration,
input[type='search']::-webkit-search-cancel-button,
input[type='search']::-webkit-search-results-button,
input[type='search']::-webkit-search-results-decoration {
  -webkit-appearance: none;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px var(--card-color-dark) inset !important;
}

input:-webkit-autofill {
  -webkit-text-fill-color: var(--text-color-dark) !important;
}

button[type='submit'] {
  background: var(--primary-color);
  color: var(--text-color-dark);
  font-weight: bold;
  border-radius: 10px;
  padding: 15px 20px;
  cursor: pointer;
  transition: transform 0.3s;
  display: flex;
  align-items: center;
}

button[type='submit']:hover {
  background: var(--primary-color);
  background: linear-gradient(90deg, #0079fe 0%, #0094fe 100%);
}

button[type='submit']:active {
  transform: scale(0.98);
}

article.card {
  display: none;
  padding: 30px 25px;
  min-height: 118px;
}

article.card.centered {
  justify-content: center;
}

.card-inner {
  display: grid;
  grid-template-columns: auto 1fr;
  grid-template-rows: repeat(6, auto);
  column-gap: 25px;
  align-items: stretch;
}

h2.user-name {
  font-size: 20px;
}

.img-container {
  width: 85px;
  height: 85px;
  overflow: hidden;
  border-radius: 50%;
  grid-area: 1 / 1 / 4 / 2;
  align-self: start;
}

.img-container img {
  width: 100%;
  height: auto;
}

.user-joined {
  grid-area: 3 / 2 / 4 / -1;
}

.user-login {
  grid-area: 2 / 2 / 3 / -1;
  height: 16px;
}

.user-bio {
  grid-area: 4 / 1 / 5 / -1;
  min-height: 60px;
  margin-top: 40px;
  padding-bottom: 20px;
}

.card-table {
  padding: 20px;
  background-color: var(--bg-color-dark);
  border-radius: 15px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(2, 1fr);
  column-gap: 20px;
  justify-items: center;
  font-size: 13px;
  grid-area: 5 / 1 / 6 / -1;
}

ul {
  grid-area: 6 / 1 / -1 / -1;
  margin-top: 35px;
}

.bold {
  font-weight: bold;
  font-size: 15px;
}

li {
  display: flex;
  align-items: center;
  gap: 10px;
  margin-bottom: 15px;
}

li a:link,
li a:visited {
  color: var(--text-color-dark);
}

/* Light theme */
body.light-mode {
  background-color: var(--bg-color-light);
  color: var(--text-color-light);
}

body.light-mode .theme-icon {
  filter: invert(44%) sepia(1%) saturate(3799%) hue-rotate(179deg) brightness(88%) contrast(89%);
}

body.light-mode .card {
  box-shadow: rgba(50, 50, 93, 0.1) 0px 13px 27px -5px, rgba(0, 0, 0, 0.15) 0px 8px 16px -8px;
  background-color: var(--card-color-light);
  color: var(--text-color-light);
}

body.light-mode .card-table {
  background-color: var(--bg-color-light);
  color: var(--text-color-light);
}

body.light-mode input[type='search'],
body.light-mode input[type='search']::placeholder,
body.light-mode li a:link,
body.light-mode li a:visited {
  color: var(--text-color-light);
}

body.light-mode li svg {
  fill: #4e6995;
}

body.light-mode input:-webkit-autofill,
body.light-mode input:-webkit-autofill:hover,
body.light-mode input:-webkit-autofill:focus,
body.light-mode input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px var(--card-color-light) inset !important;
}

body.light-mode input:-webkit-autofill {
  -webkit-text-fill-color: var(--text-color-light) !important;
}

/* Disabled elements */
li.disabled a,
body.light-mode li.disabled a,
li.disabled p,
p.disabled {
  color: #7f8286;
  pointer-events: none;
  cursor: default;
}

li.disabled svg {
  filter: opacity(0.5);
}

/* Loading animation */
.loader-container {
  display: none;
}
.loader-container.visible {
  display: flex;
  justify-content: center;
  width: 100%;
}
.lds-roller,
.lds-roller div,
.lds-roller div:after {
  box-sizing: border-box;
}
.lds-roller {
  display: inline-block;
  position: relative;
  width: 80px;
  height: 80px;
  margin-top: 30px;
}
.lds-roller div {
  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  transform-origin: 40px 40px;
}
.lds-roller div:after {
  content: ' ';
  display: block;
  position: absolute;
  width: 7.2px;
  height: 7.2px;
  border-radius: 50%;
  background: currentColor;
  margin: -3.6px 0 0 -3.6px;
}
.lds-roller div:nth-child(1) {
  animation-delay: -0.036s;
}
.lds-roller div:nth-child(1):after {
  top: 62.62742px;
  left: 62.62742px;
}
.lds-roller div:nth-child(2) {
  animation-delay: -0.072s;
}
.lds-roller div:nth-child(2):after {
  top: 67.71281px;
  left: 56px;
}
.lds-roller div:nth-child(3) {
  animation-delay: -0.108s;
}
.lds-roller div:nth-child(3):after {
  top: 70.90963px;
  left: 48.28221px;
}
.lds-roller div:nth-child(4) {
  animation-delay: -0.144s;
}
.lds-roller div:nth-child(4):after {
  top: 72px;
  left: 40px;
}
.lds-roller div:nth-child(5) {
  animation-delay: -0.18s;
}
.lds-roller div:nth-child(5):after {
  top: 70.90963px;
  left: 31.71779px;
}
.lds-roller div:nth-child(6) {
  animation-delay: -0.216s;
}
.lds-roller div:nth-child(6):after {
  top: 67.71281px;
  left: 24px;
}
.lds-roller div:nth-child(7) {
  animation-delay: -0.252s;
}
.lds-roller div:nth-child(7):after {
  top: 62.62742px;
  left: 17.37258px;
}
.lds-roller div:nth-child(8) {
  animation-delay: -0.288s;
}
.lds-roller div:nth-child(8):after {
  top: 56px;
  left: 12.28719px;
}
@keyframes lds-roller {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

@media screen and (min-width: 700px) {
  body {
    padding: 90px;
  }

  form {
    padding: 10px 10px 10px 35px;
  }

  form svg {
    width: 28px;
    height: 28px;
  }

  input[type='search'] {
    font-size: 17px;
  }

  button[type='submit'] {
    font-size: 15px;
  }

  article.card {
    padding: 35px;
  }

  .card-inner {
    column-gap: 35px;
  }

  .img-container {
    width: 115px;
    height: 115px;
  }

  h2.user-name {
    font-size: 26px;
    align-self: end;
  }

  .user-bio {
    margin-top: 24px;
  }

  .card-table {
    justify-items: start;
    align-items: center;
    padding: 10px 30px;
  }

  .bold {
    font-size: 20px;
  }

  ul {
    -moz-column-count: 2;
    -moz-column-gap: 40px;
    -webkit-column-count: 2;
    -webkit-column-gap: 40px;
    column-count: 2;
    column-gap: 40px;
  }
}

@media screen and (min-width: 1000px) {
  body {
    padding: 50px 25%;
  }

  a:hover {
    text-decoration: underline;
  }

  nav label:hover img {
    animation: scaleUp 1s;
  }

  @keyframes scaleUp {
    0% {
      transform: scale(1);
    }
    50% {
      transform: scale(1.1);
    }
    100% {
      transform: scale(1);
    }
  }
}

@media screen and (min-width: 1380px) {
  body {
    font-size: 16px;
  }

  article.card {
    padding: 45px;
  }

  .card-inner {
    grid-template-columns: auto 1fr 1fr;
    column-gap: 35px;
    align-items: center;
  }

  .user-joined {
    grid-area: 1 / 3 / 2 / -1;
    justify-self: end;
  }

  .user-login {
    margin-top: 5px;
  }

  .user-bio {
    grid-area: 3 / 2 / 4 / -1;
    margin-top: 20px;
  }

  .card-table {
    grid-area: 5 / 2 / 6 / -1;
  }

  ul {
    grid-area: 6 / 2 / -1 / -1;
    margin-top: 35px;
  }
}

